--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ a:hover { text-decoration: underline; }
    ========================================================== */
 .hero {
   position: relative;
-  background-image: url("../images/hero.jpg");
+  background-image: url("../images/hero.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
